# Sirius-Control-App

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config_v6_sirius.csh  doCmake.csh  kill_numexo2_temperature.sh  launch_temp_Viewer.csh  launch_tmux_TelnetViewer.csh  numexo2BoardList.txt  numexo2_baseline.csh  numexo2_temperature.py  numexo2_threshold.csh  numexo_baseline.sh  numexo_threshold.sh  quit_tmux_TelnetViewer.csh  reset_v6_config_noAcq.csh  reset_v6_config_withAcq.csh  sirius_control_app.cc  telnet_numexo2_tmux_view.csh
SiriusControlApp/sources/: CMakeLists.txt  kill_numexo2_temperature.sh  launch_temp_Viewer.csh  launch_tmux_TelnetViewer.csh  numexo2_temperature.py  quit_tmux_TelnetViewer.sh  reset_v6_config_noAcq.csh  reset_v6_config_withAcq.csh  sirius_control_app.cc  telnet_numexo2_tmux_view.csh
